<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_consumer_first_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:gravity="center"
        android:text="@string/consumer"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_trending_keywords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_or" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_consumer_first_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_business_first_layout" />

    <TextView
        android:id="@+id/textView_green_fix"
        android:layout_width="185dp"
        android:layout_height="0dp"
        android:layout_marginTop="143dp"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:text="@string/green_fix"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_are_you_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_are_you_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/are_you_a"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_business_first_layout"
        app:layout_constraintStart_toStartOf="@+id/button_business_first_layout"
        app:layout_constraintTop_toBottomOf="@+id/textView_green_fix" />

    <Button
        android:id="@+id/button_business_first_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/business"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_or"
        app:layout_constraintStart_toStartOf="@+id/button_consumer_first_layout"
        app:layout_constraintTop_toBottomOf="@+id/textView_are_you_a" />

    <Button
        android:id="@+id/button_trending_keywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="137dp"
        android:gravity="center"
        android:text="@string/trending_keywords"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_consumer_first_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>